# Y3DGameEngine

./: CMakeLists.txt  README.md  Y3DGameEngine.sln
ConsoleTest/: ConsoleTest.vcxproj  ConsoleTest.vcxproj.filters  Source.cpp  resource.h
DemoTest/: DemoTest.vcxproj  DemoTest.vcxproj.filters  Test.cpp  WinTest.cpp
DemoTest/D3DX11/: D3DCreator.cpp  D3DCreator.h  D3DHelper.cpp  D3DHelper.h
DemoTest/Window/: Win32Entity.cpp  Win32Entity.h  WindowBase.h
Y3DAnimation/: AnimLoop.cpp  AnimLoop.h  CurveKeyTrack.cpp  DenseKeyTrack.cpp  DenseKeyTrack.h  Helper.h  IDCreator.h  IndexTrackBase.h  IndexedKey.cpp  IndexedKey.h  IndexedKeyTrack.cpp  IndexedKeyTrack.h  IndexedRangeTrack.cpp  IndexedRangeTrack.h  IndexedTrack.cpp  IndexedTrack.h  IndexedTrackGroup.h  Interval.h  Y3DAnimation.vcxproj  Y3DAnimation.vcxproj.filters
Y3DAnimation/TrackCore/: AnimLoop.h  IndexTrackBase.h  IndexedKey.cpp  IndexedKey.h  IndexedKeyTrack.h  IndexedKeyTrack.inl  IndexedRangeTrack.h  IndexedRangeTrack.inl  IndexedTrack.h  IndexedTrack.inl  IndexedTrackGroup.cpp  IndexedTrackGroup.h
Y3DAnimation/TrackRuntime/: DenseKeyTrack.h
Y3DCommon/: CameraEntity.cpp  CameraEntity.h  ContainerUtility.h  List.h  Y3DCamera.cpp  Y3DCamera.h  Y3DCameraDesc.h  Y3DCameraOrtho.cpp  Y3DCameraOrtho.h  Y3DCameraPerspective.cpp  Y3DCameraPerspective.h  Y3DCommon.vcxproj  Y3DCommon.vcxproj.filters  Y3DMacro.h  Y3DMathFun.h  Y3DMathFunc.h  Y3DMatrix.h  Y3DMatrixFunc.cpp  Y3DMatrixFunc.h  Y3DPI.h  Y3DQuaternion.h  Y3DTypes.h  Y3DVector.h
Y3DSTLCore/: Allocator.h  BinarySearch.h  CoreTypes.h  IdentityFunctor.h  Invoke.h  Y3DSTLCore.vcxproj  Y3DSTLCore.vcxproj.filters
Y3DSTLCore/Algorithms/: BinaryHeap.h
Y3DSTLCore/Containers/: Construct.h  Deque.h  HashTable.h  IsSafetyFillMemset.h  IteratorBase.h  List.h  Queue.h  RBTree.h  Slist.h  Stack.h  Uninitialized.h  Vector.h
Y3DSTLCore/SGISTL/: Allocator.h  Construct.h  Deque.h  IteratorBase.h  List.h  Queue.h  RBTree.h  Set.h  Slist.h  Stack.h  Uninitialized.h  Vector.h  map.h
Y3DSTLCore/Template/: AddReference.h  Decay.h  Greater.h  IdentityFunctor.h  Invoke.h  IsArithmetic.h  IsArray.h  IsCharacter.h  IsContiguousContainer.h  IsPODType.h  IsPointer.h  IsTrivially.h  IsTriviallyAssignable.h  IsTriviallyConstructible.h  IsTriviallyCopyAssignable.h  IsTriviallyCopyConstructible.h  IsTriviallyDestructible.h  Less.h  PointerIsConvertibleFromTo.h  RemoveCV.h  RemoveReference.h  Source.cpp  Template.h  TypeHash.h  TypeTraits.h  UniquePtr.h
common/: BitContainer.h  CMakeLists.txt  DurationForProfile.h  Types.h  Y3DMacro.h  Y3DTypes.h  aligned_type.h  shared_ptr.h  type.h  unique_ptr.h
common/Camera/: CameraEntity.cpp  Y3DCamera.h  Y3DCameraDesc.h  Y3DCameraOrtho.cpp  Y3DCameraOrtho.h  Y3DCameraPerspective.cpp  Y3DCameraPerspective.h
common/Math/: Alpha.h  EastingFunction.h  Interpolation.h  MathFunction.h  TestForMath.h  Y3DMathFunc.h  Y3DMatrix.h  Y3DMatrixFunc.cpp  Y3DMatrixFunc.h  Y3DPI.h  Y3DQuaternion.h  Y3DVector.h
common/core/: aligned_type.h  any.h  overload.h  shared_ptr.h  type_traits.h  unique_ptr.h
common/core/poly/: poly.h  poly_detail.h  poly_inl.h
common/fastmath/: Vector3.h
console/: CMakeLists.txt  Source.cpp
io/: CMakeLists.txt
io/serialize/: json_data.cpp  json_data.h  ujson.cpp  ujson.h
io/stream/: binary_stream.cpp  binary_stream.h  file_stream.cpp  file_stream.h  stream.cpp  stream.h  stream_reader.cpp  stream_reader.h  stream_writer.cpp  stream_writer.h
memory/: CMakeLists.txt  allocator.cpp  allocator.h  freelist_allocator.cpp  freelist_allocator.h  memory_utility.cpp  memory_utility.h  stack_allocator.cpp  stack_allocator.h
reflection/: CMakeLists.txt  array_view.h  core.h  variant.cpp  variant.h  variant_impl.h
reflection/argument/: argument.cpp  argument.h  argument_impl.h
reflection/class/: class.cpp  class.h  class_impl.h
reflection/constructor/: constructor.cpp  constructor.h  constructor_wrapper.cpp  constructor_wrapper.h  constructor_wrapper_detail.h
reflection/destructor/: destructor.cpp  destructor.h  destructor_wrapper.cpp  destructor_wrapper.h  destructor_wrapper_detail.h
reflection/method/: function_traits.h  method.cpp  method.h  method_invoke.h  method_wrapper.cpp  method_wrapper.h  method_wrapper_detail.h
reflection/parameter/: parameter.cpp  parameter.h  parameter_compare.h  parameter_infos.h  parameter_wrapper.h
reflection/property/: property.cpp  property.h  property_accessor.h  property_wrapper.cpp  property_wrapper.h  property_wrapper_detail.h
reflection/registration/: registration.h  registration_bind.h  registration_executor.h  registration_impl.h  registration_manager.cpp  registration_manager.h
regex/: CMakeLists.txt  tiny_regex.cpp  tiny_regex.h
stl/: CMakeLists.txt
stl/Containers/: Allocator.h  Array.h  Construct.h  Deque.h  HashTable.h  IteratorBase.h  Queue.h  RBTree.h  Set.h  Slist.h  Uninitialized.h  Vector.h
stl/Template/: AndOrNot.h  Decay.h  EnableIf.h  IdentityFunctor.h  Invoke.h  IsArithmetic.h  IsArray.h  IsContiguousContainer.h  IsPODType.h  IsPointer.h  IsTrivially.h  Junction.h  Less.h  PointerIsConvertibleFromTo.h  RemoveCV.h  RemoveReference.h  Source.cpp  Template.h  UniquePtr.h
test/: CMakeLists.txt  Source.cpp
unittest/: CMakeLists.txt  gtest_main.cpp
unittest/googletest/: CMakeLists.txt
unittest/googletest/cmake/: internal_utils.cmake
unittest/src/: 001_regex.cpp  002_regex.cpp
